# idky

./: .gitignore  Cargo.toml  build.rs
src/: main.rs
src/bindings/: sdl.rs
src/bindings/sdl/: Cargo.toml  build.rs
src/bindings/sdl/src/: lib.rs  sdl_bindings.rs  sdl_vulkan.rs
src/bindings/vulkan/: Cargo.toml  build.rs
src/bindings/vulkan/src/: vulkan.rs  wrapper.rs
src/core/: mod.rs  system.rs  vec2.rs
src/sdl/: event.rs  mod.rs
src/window/: event.rs  mod.rs  pipeline.rs  player.rs  render.rs  renderer.rs  window.rs
