[package]
name = "dont-know-yet"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "idky"
path = "src/main.rs"

[dependencies]
sdl = { path = "src/bindings/sdl" }
ash = "0.35.1"
ash-window = "0.9.0"
# TODO Check if this dependency is necessary
raw-window-handle = "0.4.2"
